--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,13 @@
 
 body {
   font-family: 'Nunito', sans-serif;
-  min-height: 100vh;
+  min-height: 50vh;
   background-color: var(--BGCOLOR);
   color: var(--COLOR);
-  background-image: url('/src/image/background.jpg');
-  background-size: cover;
+  background-image: url('/src/image/back.jpg');
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-blend-mode: multiply;
 }
 
